# libvmod-uuid

./: README.md  README.rst  autogen.sh  configure.ac  vmod-uuid.spec
src/: Makefile.am  vmod_uuid.c  vmod_uuid.vcc
